--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         color="#000000"><font face="Facon"><font style="font-size: 20pt" size="5"><span
 
-              lang="en-US"><i><span style="text-decoration: none"><span style="font-weight: normal">printing
+              lang="en-US"><i><span style="text-decoration: none"><span style="font-weight: normal">Printing
                     a line</span></span></i></span></font></font></font></p>
     <p class="western" style="margin-bottom: 0in; font-style: normal; font-weight: normal; line-height: 100%; text-decoration: none"
 
