--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p class="western" style="margin-bottom: 0in; line-height: 100%" align="center">
-      <font face="Facon"><font style="font-size: 20pt" size="5"><i><span style="text-decoration: none"><span
+      <font face="Courier New, Monospace"><font style="font-size: 20pt" size="5"><i><span style="text-decoration: none"><span
 
                 style="font-weight: normal">PyLearn / </span></span></i></font></font><font
 
