--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
                 style="font-weight: normal">PyLearn / </span></span></i></font></font><font
 
-        color="#000000"><font face="Facon"><font style="font-size: 20pt" size="5"><span
+        color="#000000"><font face="Courier New, Monospace"><font style="font-size: 20pt" size="5"><span
 
               lang="en-US"><i><span style="text-decoration: none"><span style="font-weight: normal">Printing
                     a line</span></span></i></span></font></font></font></p>
