--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ will
       </li>
       <li>
         <p class="western" style="margin-bottom: 0in; line-height: 100%" align="justify">
-          <font face="Cambria, serif"><b><span style="background: #fff5ce"><a href="https://aritra855.github.io/pylearn-mul-div"><font
+          <font face="Cambria, serif"><b><span style="background: #fff5ce"><a href="https://aritra855.github.io/pylearn-mul-div/"><font
 
                     style="font-size: 12pt" size="3"><span style="font-style: normal"><span
 
